added a functioning delete button to the reviews, reached full CRUD

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -8,3 +8,13 @@
 .poster:hover {
   opacity: 0.8;
 }
+
+.rev-card {
+  display: flex;
+}
+
+.revs-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
